force right-alignment of Card background image (ensure display of github logo)

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,6 +1,7 @@
 .card {
   background-size: cover;
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/card-bg.jpg");
+  background-position: right;
   word-wrap: break-word;
   -moz-hyphens: auto;
 }
